implemented instance pool for layout algorithms